<resources>
    <string name="app_name">Sarang Gujarati</string>
    <string name="api_key">AIzaSyDbCHpHjoiWINRI3bgLeXfCNBwGXv28FSo</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1243</string>

    <string name="client_id">533857723057-nedgu745mg0q6n1c1jshauc7tl2e49gl.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="empty" />


    <string name="guest_text">start as a guest</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_agree_txt">I agree to the</string>
    <string name="terms">terms</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="privacy_policy">privacy policy</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_text">or sign up with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_up_continue">Sign Up to continue</string>
    <string name="already_user">Already User?</string>
    <string name="font_size">Font Size</string>
    <string name="select_language">Select Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_us">About Us</string>
    <string name="join_us">Join Us</string>
    <string name="advertise">Advertise with us</string>
    <string name="contact_us">Contact Us</string>
    <string name="policy_terms"><![CDATA[Policy & Terms]]></string>
    <string name="login">Login</string>
    <string name="v_valid_email">Please enter valid email address</string>
    <string name="v_email">Please enter email address</string>
    <string name="v_password">Please enter password</string>
    <string name="v_code">Please enter code</string>
    <string name="latest_gujrati_news">Latest \nGujrati News</string>
    <string name="gujarati_news_on_the_go">Gujarati News On-The-Go</string>
    <string name="live_news_channels">&#160; Live News &#160;\nChannels</string>
    <string name="all_guj_news_papers">All Gujrati \nNewspapers</string>
    <string name="latest_news_on_the_go">&#160;&#160;News &#160;\n&#160;&#160;On-The-Go&#160;</string>
    <string name="str_live_darshan_temple">લાઈવ મંદિર દર્શન</string>
    <string name="Featured_stories">Featured Stories</string>
    <string name="my_news_feed">My News Feed</string>
    <string name="no_task_available">No Data Found!</string>
    <string name="top_cities">Top Cities</string>
    <string name="top_category">Top Categories</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="reset_password_txt">Reset Password</string>
    <string name="Reset_password">Reset Password</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something Went Wrong !!</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="v_name">Please enter name</string>
    <string name="v_phone">Please enter phone number</string>
    <string name="v_valid_phone">Please enter only 10 digit for phone</string>
    <string name="v_valid_password">Please enter at least 8 digit for password</string>
    <string name="v_valid_name">Please enter at least 4 character for name</string>
    <string name="code">Code</string>
    <string name="forgot_password_txt_detail">To reset password please enter your email address</string>
    <string name="otp">Otp</string>
    <string name="send_otp">Send Otp</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="v_valid_code">Please enter valid otp</string>
    <string name="v_valid_password_match">Password and confirm password are not same</string>
    <string name="otp_send_success">Otp Sent Successfully</string>
    <string name="otp_verified">Otp verified Successfully</string>
    <string name="v_confirm_password">Please enter confirm password</string>
    <string name="v_valid_confirm_password">Please enter at least 8 digit for confirm password</string>
    <string name="logout">Logout</string>
    <string name="exit_app_message">Are you sure you want to exit ?</string>
    <string name="alert">Alert!</string>
    <string name="back_to_channel">Back to channel</string>
    <string name="player_error">Error</string>
    <string name="all_channels">All News Channels</string>
    <string name="Yes">Yes</string>
    <string name="no">No</string>
    <string name="back_again_text">Please click BACK again to exit</string>
    <string name="update_profile">Update Profile</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallary">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="edit_profile">Update Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_title">Delete Account!</string>
    <string name="yes">Yes</string>
    <string name="delete_account_message">Are you sure you want to delete this account?</string>
    <string name="tap_to_read_full_story">Tap to read full story</string>
    <string name="all_news_paper">All News Paper</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="str_contact_us">Contact us</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_advertise_with_us">Advertise with us</string>
    <string name="p_strong_privacy_policy"><![CDATA[<p><strong>Privacy Policy&nbsp;</strong></p> <p>This document presents the privacy policy for Sarang Gujarati App. The same can be described in a different way but with the same meaning or entity like Sarang Gujarati App, Sarang App, Sarang News App, Sarang News & Infotainment &nbsp;App, and more. &nbsp;Sarang News & Infotainment developed Sarang Gujarati News and infotainment app as a free app. The service is provided at no cost.</p> <p>Below given information is for visitors and users who uses the app on both platforms regarding the terms and conditions for usage, developer disclosure and disclaimer.</p> <p>If you have downloaded the Sarang Gujarati application from Google Play Store than you are agreeing to the terms and conditions set by the publisher and collection of the information and it&rsquo;s usage in relation to this policy. The personal information of the users collected is for offering better services to them and not to share with anyone commercially or otherwise.&nbsp;</p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy. The app does use third-party services that may collect information used to identify you.</p> <p><strong>We don&rsquo;t Collect Any Personal Information</strong></p> <p>When you download and use our applications, we don&rsquo;t require you to provide any personal information, and we don&rsquo;t collect, share any personal information from your device as well. In more clarity we don&rsquo;t collect personal information like your name, address, location and email address.</p> <p><strong>We don&rsquo;t Collect Information About Children</strong></p> <p>Our mobile application comply with children&rsquo;s online Privacy Protection Act. Knowingly we don&rsquo;t collect any personal information of children under the age of 13. And if the user mentioned that his or her age is below 13 by any mean then we don&rsquo;t collect, store and share their data for app customization as well.&nbsp;</p> <p><strong>Location Information</strong></p> <p>We don&rsquo;t use, collect your precise location information while using our app.&nbsp;</p> <p><strong>Google Analytics Data Collection</strong></p> <p>Google Analytics is a website usage analysis service provided by Google Inc. Google utilizes and analyse data collected to track usage of the website and mobile application, to maintain reports of the same and share them with other Google services. Google may use the Data collected to contextualize and personalize the ads of its own advertising network.&nbsp;</p> <p>Link to the privacy policy of third-party service providers used by the app</p> <ul> <li>Google Play Services</li> <li>AdMob</li> <li>Google Analytics for Firebase</li> <li>Firebase Crashlytics</li> </ul> <p><strong>Log Data</strong></p> <p>We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (&ldquo;IP&rdquo;) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p> <p><strong>Cookies</strong></p> <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. This Service does not use these &ldquo;cookies&rdquo; explicitly. However, the app may use third-party code and libraries that use &ldquo;cookies&rdquo; to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</p> <p><strong>Security</strong></p> <p>We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p> <p><strong>Links to Other Sites</strong></p> <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p> <p><strong>Changes to This Privacy Policy</strong></p> <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.</p> <p>This policy is effective as of 2022-02-02</p> <p><strong>Contact Us</strong></p> <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at sarangapplication@gmail.com</p>]]></string>
    <string name="default_notification_channel_id">channel id</string>

</resources>