<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?appBackground"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_bg_white"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_continue"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/app_grey"
            android:fontFamily="@font/montserrat_bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="14sp"
            android:hint="@string/name"
            android:background="@drawable/shape_border_grey"
            android:ems="0"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:textColor="?textColor"
            android:fontFamily="@font/montserrat_bold"
            android:imeOptions="actionNext"
            android:text=""/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignupPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="14sp"
            android:hint="@string/phoneNumber"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_border_grey"
            android:ems="0"
            android:inputType="phone"
            android:textColor="?textColor"
            android:fontFamily="@font/montserrat_bold"
            android:imeOptions="actionNext"
            android:text=""/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="14sp"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_border_grey"
            android:ems="0"
            android:inputType="textEmailAddress"
            android:textColor="?textColor"
            android:fontFamily="@font/montserrat_bold"
            android:imeOptions="actionNext"
            android:text=""/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:background="@drawable/shape_border_grey"
            android:ems="0"
            android:textColor="?textColor"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat_bold"
            android:imeOptions="actionDone"
            android:text=""/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUpDialogue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/shape_bg_light_orange"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:padding="15dp"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_user"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignInDialogue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/app_orange"
                android:fontFamily="@font/montserrat_bold"/>

        </LinearLayout>
    </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>